Updated mockito version to work in Java 17